# xtsf

./: AGENTS.md  README.md  pyproject.toml
docs/: package_summary.aux  package_summary.tex  render_with_miktex.ps1
examples/: build_synthetic_notebook.py  synthetic_temporal_toolkit.ipynb
src/xpc/: __init__.py  adapters.py  conditioners.py  data.py  explainer.py  explanation.py  groups.py  maskers.py
tests/: test_adapters.py  test_explainer.py  test_explanation.py  test_groups_and_baselines.py  test_maskers_and_conditioners.py
xpc_old/: README.md
xpc_old/datasets/data_rte/: README.md  df_test.csv  df_train.csv
xpc_old/examples/: README.md  example_experiment.ipynb  example_rte.ipynb  example_smach.ipynb  testing_coalitions.json  testing_fixed_n1n2.json  testing_gams.json  testing_intervals.json
xpc_old/models/Rmodels/: README.md
xpc_old/models/Rmodels/1/: script.R
xpc_old/models/Rmodels/1b/: script.R
xpc_old/models/Rmodels/1t/: model.rds  script.R
xpc_old/src/: README.md  ale.py  pdp.py
xpc_old/src/shapley/: README.md  __init__.py  analysis.py  conditional.py  explainers.py  gams.py  kernel.py  monte_carlo.py  preprocess.py
xpc_old/src/utils/: README.md  data.py  models.py  opera.py  plots.py  series.py
