[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xpc"
version = "0.1.0"
description = "A universal Monte Carlo Shapley toolkit for tabular and temporal data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Gaspard Berthelier"}]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
pandas = ["pandas>=2"]
torch = ["torch>=2"]
test = ["pytest>=8", "pandas>=2", "scikit-learn>=1.3"]
notebook = ["jupyter>=1", "matplotlib>=3.7", "pandas>=2"]
all = ["pandas>=2", "torch>=2", "scikit-learn>=1.3", "jupyter>=1", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["xpc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
